k8s-training/client-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template: # template de pod
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: laithharb/web-app:v2

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 3200
      targetPort: 3000 # cible l'application serveur conteneurisé dans le Pod référencé
      nodePort: 30007
