k8s-training/mongo-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template: # template de pod
    metadata:
      name: mongo-pod
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-srv
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
